fix modal z-index to be above all content

--- a/client/agora/public/css/topic.css
+++ b/client/agora/public/css/topic.css
@@ -777,6 +777,7 @@
     top: 8.5%;
     display: none;
     position: absolute;
+    z-index: 200; /* placing modal above all content on screen */
 }
 .text-center-mod {
     text-align: center;
